--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -12,6 +12,8 @@
     
     <a href="/users/<%= user._id %>/projects/<%= currentProject._id %>/edit">Edit this project</a> 
 
+    <a href="/users/<%= user._id %>/projects/<%= currentProject._id %>/tickets">Check the tickets</a>
+
     <form
       action="/users/<%= user._id %>/projects/<%= currentProject._id %>?_method=DELETE"
       method="post">
