Finished tickets crud applications and the views for it also modified the models for both project and user

--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -17,7 +17,7 @@
     <form
       action="/users/<%= user._id %>/projects/<%= currentProject._id %>?_method=DELETE"
       method="post">
-      <button type="submit">Delete this recipe</button>
+      <button type="submit">Delete this project</button>
     </form>
 
 </body>
