--- a/views/tickets/show.ejs
+++ b/views/tickets/show.ejs
@@ -6,12 +6,21 @@
     <title>ticket</title>
 </head>
 <body>
+    <%- include('../partials/_navbar.ejs') %>
     <h1>Information of the ticket</h1>
     <p>description:</p>
-    <p><%= ticket.description %></p>
+    <p><%= currentTicket.description %></p>
     <p>priority:</p>
-    <p><%= ticket.priority %></p>
+    <p><%= currentTicket.priority %></p>
     <p>status:</p>
-    <p><%= ticket.status %></p>
+    <p><%= currentTicket.status %></p>
+    <a href="/users/<%= user._id %>/projects/<%= project._id %>/tickets">back to the tickets</a>
+    <a href="/users/<%= user._id %>/projects/<%= project._id %>/tickets/<%= currentTicket._id %>/edit">Edit this ticket</a> 
+
+    <form
+      action="/users/<%= user._id %>/projects/<%= project._id %>/tickets/<%= currentTicket._id %>?_method=DELETE"
+      method="post">
+      <button type="submit">Delete this ticket</button>
+    </form>
 </body>
 </html>
