--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -4,16 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
+  <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <a href="/">Back to home</a>
-  <h1>Sign in</h1>
-  <form action="/auth/sign-in" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" name="username" id="username" required />
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" required />
-    <button type="submit">Sign in</button>
-  </form>
+  <a href="/" class="has-text-centered">Back to home</a>
+  <h1 class="has-text-centered">Sign into your account</h1>
+  <section class="section">
+    <div class="container my-6">
+      <div class="columns is-vcentered">
+        <div class="column is-3"></div>
+        <div class="column is-6 has-text-centered">
+          <form action="/auth/sign-in" method="POST">
+
+            <div class="field">
+              <label class="label">Username</label>
+              <div class="control has-icons-left has-icons-right">
+                <input class="input is-success" type="text" name="username" placeholder="Enter your username here!">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-user"></i>
+                </span>
+            </div>
+        
+        
+            <div class="field">
+              <label class="label" for="password">Password:</label>
+              <p class="control has-icons-left">
+                <input class="input" type="password" placeholder="Password" name="password" id="password" required>
+                <span class="icon is-small is-left">
+                  <i class="fas fa-lock"></i>
+                </span>
+              </p>
+            </div>
+
+            
+            <button class="button is-primary" type="submit">Sign in</button>
+          </form>
+        </div>
+        <div class="column is-2"></div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
