--- a/views/tickets/show.ejs
+++ b/views/tickets/show.ejs
@@ -14,6 +14,8 @@
     <p><%= currentTicket.priority %></p>
     <p>status:</p>
     <p><%= currentTicket.status %></p>
+    <p>Created at:</p>
+    <p><%= currentTicket.createdAt %></p>
     <a href="/users/<%= user._id %>/projects/<%= project._id %>/tickets">back to the tickets</a>
     <a href="/users/<%= user._id %>/projects/<%= project._id %>/tickets/<%= currentTicket._id %>/edit">Edit this ticket</a> 
 
