--- a/views/tickets/edit.ejs
+++ b/views/tickets/edit.ejs
@@ -4,34 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editing a ticket</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css"
+    />
 </head>
 <body>
     <%- include('../partials/_navbar.ejs') %>
-    <form action="/users/<%= user._id %>/projects/<%= project._id %>/tickets/<%= ticket._id %>?_method=PUT" method="POST">
-        <label for="description">description:</label>
-        <textarea name="description" id="description" value="<%= ticket.description %>"></textarea>
 
-        <label for="priority">priority:</label>
-        <select name="priority" id="priority">
-            <% priorityOptions.forEach((priority) => { %>
-                <option value="<%= priority %>"
-                    <%= ticket.priority === priority ? 'selected' : '' %> >
-                <%= priority %>
-                </option>
-            <% }) %>
-        </select>
+    <section class="section">
+        <div class="container my-6">
+          <div class="columns is-vcentered">
+            <div class="column is-3"></div>
+            <div class="column is-6 has-text-centered">
+                <form action="/users/<%= user._id %>/projects/<%= project._id %>/tickets/<%= ticket._id %>?_method=PUT" method="POST">
 
-        <label for="status">status:</label>
-        <select name="status" id="status">
-            <% statusOptions.forEach((status) => { %>
-                <option value="<%= status %>"
-                    <%= ticket.status === status ? 'selected' : '' %> >
-                <%= status %>
-                </option>
-            <% }) %>
-        </select>
+                    <div class="field">
+                        <label class="label" for="description">description:</label>
+                        <textarea class="textarea is-focused is-success" name="description" id="description"></textarea>
+                    </div> 
 
-        <button type="submit">Update the ticket</button>
-    </form>
+                    <div class="field">
+                        <div class="control">
+                            <div class="select">
+                                <select name="priority" id="priority">
+                                    <% priorityOptions.forEach((priority) => { %>
+                                        <option value="<%= priority %>"
+                                            <%= ticket.priority === priority ? 'selected' : '' %> >
+                                        <%= priority %>
+                                        </option>
+                                    <% }) %>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="field">
+                        <div class="control">
+                            <div class="select">
+                                <select name="status" id="status">
+                                    <% statusOptions.forEach((status) => { %>
+                                        <option value="<%= status %>"
+                                            <%= ticket.status === status ? 'selected' : '' %> >
+                                        <%= status %>
+                                        </option>
+                                    <% }) %>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+            
+                    <div class="field my-3">
+                        <div class="control">
+                            <button class="button is-primary" type="submit" class="button is-danger">Update the ticket</button>
+                        </div>
+                    </div>
+            
+                </form>
+            </div>
+            <div class="column is-2"></div>
+          </div>
+        </div>
+      </section>
 </body>
 </html>
