--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+  <div class="p-2">
     <a href="/" class="has-text-centered">Back to home</a>
+  </div>
+  
   <h1 class="has-text-centered">Create a new account!</h1>
   <section class="section">
     <div class="container my-6">
