--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <div class="columns is-vcentered">
           <div class="column is-3"></div>
           <div class="column is-6 has-text-centered">
-            <div class="card has-background-primary-light">
+            <div class="card has-background-info has-text-black">
               <div
                 class="card-header is-flex is-justify-content-center is-align-items-center"
               >
@@ -35,8 +35,8 @@
                   <a href="/auth/sign-out" class="card-footer-item">Sign out</a>
                 </p>
                 <% } else { %>
-                <a href="/auth/sign-up" class="card-footer-item">Sign up</a>
-                <a href="/auth/sign-in" class="card-footer-item">Sign in</a>
+                <a href="/auth/sign-up" class="card-footer-item has-text-black">Sign up</a>
+                <a href="/auth/sign-in" class="card-footer-item has-text-black">Sign in</a>
                 <% } %>
               </div>
             </div>
