Fixed layout bug and privilge issue about the deletion of project for the user

--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -16,7 +16,7 @@
     </div>
     <section class="section">
         <div class="contianer">
-            <% if ( projects ) { %>
+            <% if ( projects.length == 0 ) { %>
                 <h1 class="title has-text-centered">You don't have any projects!</h1>
             <% } else { %>
                 <div class="columns is-multiline">
